--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       imediato? O cara que encontrou o boss ficou cobrando, até que ele mandou:
     </p>
 
-    <p><img src="./assets/1.jfif" /></p>
+    <p><img src="./1.jfif" /></p>
 
-    <p><img src="./assets/2.jfif" /></p>
+    <p><img src="./2.jfif" /></p>
 
-    <p><img src="./assets/3.jfif" /></p>
+    <p><img src="./3.jfif" /></p>
 
     <p>
       Observe que ele não enviou o print que o client tira automaticamente ao tirar boss, com o texto do loot no meio da
@@ -61,8 +61,8 @@
       texto do loot estava visivelmente alterado:
     </p>
 
-    <p><img src="./assets/4.jfif" /></p>
-    <p><img src="./assets/5.jfif" /></p>
+    <p><img src="./4.jfif" /></p>
+    <p><img src="./5.jfif" /></p>
 
     <p>
       Outro detalhe visível ali, é que quando dropa uma wand of inferno, o loot aparece como "a wand of inferno". No
@@ -70,7 +70,7 @@
       dela. O "a" está presente:
     </p>
 
-    <p><img src="./assets/6.jfif" /></p>
+    <p><img src="./6.jfif" /></p>
 
     <p>
       Observe que:<br />
@@ -101,7 +101,7 @@
       querer quando ia comprar um dwarven ring.
     </p>
 
-    <p><img src="./assets/7.jfif" /></p>
+    <p><img src="./7.jfif" /></p>
 
     <p>Nessa ocasião, ele deu 2kks como pagamento pelo suposto engano.</p>
 
@@ -111,7 +111,7 @@
     </p>
 
     <audio controls="controls" id="audio">
-      <source src="./assets/1.ogg" type="audio/ogg" />
+      <source src="./1.ogg" type="audio/ogg" />
     </audio>
 
     <p>
@@ -130,31 +130,31 @@
       primeiro e:
     </p>
 
-    <p><img src="./assets/8.jfif" /></p>
+    <p><img src="./8.jfif" /></p>
 
-    <p><img src="./assets/9.jfif" /></p>
+    <p><img src="./9.jfif" /></p>
 
     <p>A Furious Frock e o CM Token estavam lá.</p>
 
     <p>Ao questionar o colecionador de quem ele teria comprado:</p>
 
-    <p><img src="./assets/10.jfif" /></p>
-    <p><img src="./assets/11.jfif" /></p>
+    <p><img src="./10.jfif" /></p>
+    <p><img src="./11.jfif" /></p>
 
     <audio controls="controls" id="audio">
-      <source src="./assets/2.ogg" type="audio/ogg" />
+      <source src="./2.ogg" type="audio/ogg" />
     </audio>
 
     <audio controls="controls" id="audio">
-      <source src="./assets/3.ogg" type="audio/ogg" />
+      <source src="./3.ogg" type="audio/ogg" />
     </audio>
 
     <audio controls="controls" id="audio">
-      <source src="./assets/4.ogg" type="audio/ogg" />
+      <source src="./4.ogg" type="audio/ogg" />
     </audio>
 
     <audio controls="controls" id="audio">
-      <source src="./assets/5.ogg" type="audio/ogg" />
+      <source src="./5.ogg" type="audio/ogg" />
     </audio>
 
     <p>
@@ -162,11 +162,11 @@
       2022 no dia que recebeu com a token:
     </p>
 
-    <p><img src="./assets/12.jfif" /></p>
+    <p><img src="./12.jfif" /></p>
 
     <p>E atualmente, ainda em sua posse:</p>
 
-    <p><img src="./assets/13.jfif" /></p>
+    <p><img src="./13.jfif" /></p>
 
     <p>
       Entrei em contato com o colecionador, que de boa índole aceitou vender o token de volta pelo preço que pagou. E
@@ -174,7 +174,7 @@
     </p>
 
     <video controls="controls" id="video">
-      <source src="./assets/1.mp4" />
+      <source src="./1.mp4" />
     </video>
 
     <p>Assim, consegui dar o look - antes não dava pois estava afastado da janela da house</p>
@@ -189,7 +189,7 @@
 
     <p>E podemos ver que foi justamente escrito por Rejana on Inabra no dia 15 de Julho 2022.</p>
 
-    <p><img src="./assets/14.jfif" /></p>
+    <p><img src="./14.jfif" /></p>
 
     <p>
       Como falei, ele loga chars dos services dos amigos. Vai saber o que pode ter sumido por aí? Se pegou um crossbow
@@ -197,9 +197,9 @@
     </p>
 
     <audio controls="controls" id="audio">
-      <source src="./assets/6.ogg" type="audio/ogg" />
+      <source src="./6.ogg" type="audio/ogg" />
     </audio>
 
-    <p><img src="./assets/15.jfif" /></p>
+    <p><img src="./15.jfif" /></p>
   </body>
 </html>
