--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <p>
       Tem um camarada no meu servidor que é extremamente conhecido e respeitado por todos. Ele é líder da maior guild
-      neutral do server, é tutor 6 estrelas e bastante ativo no servidor. Ele também loga chars pra fazer services da
-      guild dominante do servidor, onde um dos líderes é aparentemente seu RL.
+      neutral do server, é tutor 6 estrelas e bastante ativo no servidor. Ele também diz que loga chars pra fazer services da
+      guild dominante do servidor, onde diz que tem RL.
     </p>
 
     <p>
